@@ -210,7 +210,7 @@ namespace Mono.MonoBASIC
 			keywords.Add ("is", Token.IS);
 			keywords.Add ("let ", Token.LET ); // An unused VB.NET keyword
 			keywords.Add ("lib ", Token.LIB );
-			keywords.Add ("like ", Token.LIKE );
+			keywords.Add ("like", Token.LIKE );
 			keywords.Add ("long", Token.LONG);
 			keywords.Add ("loop", Token.LOOP);
 			keywords.Add ("me", Token.ME);
