@@ -1,3 +1,9 @@
+2005-03-18 Satya Sudha K <ksathyasudha@novell.com>
+	* mb-parser.jay :
+	* mb-tokenizer.cs :
+	* expression.cs :
+		Supported 'Like' operator
+
 2005-03-18 Manjula GHM <mmanjula@novell.com>
            Sudharsan V <vsudharsan@novell.com>
           * mb-parser.jay:
